Revert "fix: book  btn not showing on large tablet screen" shouldn't change the card height&grid-template-rows for the desktop version This reverts commit ca31deb502e0e16cb3c0f7f811d189d23069489a.

--- a/sass/components/_card.sass
+++ b/sass/components/_card.sass
@@ -12,6 +12,7 @@
         margin-right: auto
 
     position: relative
+    height: abstracts.$tour-rows-height
 
     &__side
         position: absolute
@@ -26,6 +27,7 @@
         -webkit-backface-visibility: hidden
         backface-visibility: hidden
 
+        height: abstracts.$tour-rows-height
 
         width: 100%
         transition: all 1s ease
@@ -129,8 +131,7 @@
             font-weight: abstracts.get-fweight('medium')
 
     // card style for Tablet landscape
-    @media only screen and (max-width: 75em),only screen and (hover:none)
-
+    @include abstracts.respond(tab-land)
         height: auto
         background-color: abstracts.$white
         border-radius: 3px
