--- a/sass/pages/_home.sass
+++ b/sass/pages/_home.sass
@@ -44,6 +44,7 @@
             padding: 20rem 0 10rem 0
         .grid-container
             grid-template-columns: repeat( 3,25%)
+            grid-template-rows: abstracts.$tour-rows-height
             grid-column-gap: 5%
             place-content: center
             @include abstracts.respond(tab-land)
